Added cachiung input

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v4
       - name: Load and Cache dependencies
-        uses: ./.github/actions/cached-deps\
+        uses: ./.github/actions/cached-deps
         with:
           caching: 'false'
       - name: Lint code
